shell/parser/parser.output

state 0
	$accept: .stmts $end 
	stmts: .    (1)
	idents: .    (28)

	$end  reduce 1 (src line 79)
	IDENT  shift 21
	NUMBER  shift 16
	STRING  shift 24
	EOF  shift 13
	FUNC  shift 9
	RETURN  shift 10
	IF  shift 7
	NIL  shift 18
	FOR  shift 8
	TRUE  shift 17
	FALSE  shift 19
	GO  shift 11
	COMMENT  shift 12
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	;  shift 14
	\n  shift 15
	$  shift 20
	.  reduce 28 (src line 268)

	stmts  goto 1
	stmt  goto 2
	pre_stmt  goto 3
	stmt_delimiter  goto 4
	expr  goto 5
	idents  goto 6

state 1
	$accept:  stmts.$end 

	$end  accept
	.  error


state 2
	stmts:  stmt.stmts 
	stmts: .    (1)
	idents: .    (28)

	$end  reduce 1 (src line 79)
	IDENT  shift 21
	NUMBER  shift 16
	STRING  shift 24
	EOF  shift 13
	FUNC  shift 9
	RETURN  shift 10
	IF  shift 7
	NIL  shift 18
	FOR  shift 8
	TRUE  shift 17
	FALSE  shift 19
	GO  shift 11
	COMMENT  shift 12
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	}  reduce 1 (src line 79)
	;  shift 14
	\n  shift 15
	$  shift 20
	.  reduce 28 (src line 268)

	stmts  goto 29
	stmt  goto 2
	pre_stmt  goto 3
	stmt_delimiter  goto 4
	expr  goto 5
	idents  goto 6

state 3
	stmt:  pre_stmt.stmt_delimiter 

	EOF  shift 13
	COMMENT  shift 12
	;  shift 14
	\n  shift 15
	.  error

	stmt_delimiter  goto 30

state 4
	stmt:  stmt_delimiter.    (4)

	.  reduce 4 (src line 99)


state 5
	pre_stmt:  expr.    (6)
	pre_stmt:  expr.CHAN expr 
	pre_stmt:  expr.INC 
	pre_stmt:  expr.DEC 
	expr:  expr.. IDENT 
	expr:  expr.[ expr ] 
	expr:  expr.( exprs ) 
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.< expr 
	expr:  expr.> expr 
	expr:  expr.LE expr 
	expr:  expr.GE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.SHL expr 
	expr:  expr.SHR expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.XOR expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.^ expr 

	INC  shift 32
	DEC  shift 33
	XOR  shift 52
	CHAN  shift 31
	OR  shift 51
	AND  shift 50
	|  shift 54
	&  shift 53
	^  shift 55
	<  shift 42
	>  shift 43
	LE  shift 44
	GE  shift 45
	NE  shift 47
	EQ  shift 46
	+  shift 37
	-  shift 38
	*  shift 39
	/  shift 40
	%  shift 41
	SHR  shift 49
	SHL  shift 48
	[  shift 35
	(  shift 36
	.  shift 34
	.  reduce 6 (src line 112)


state 6
	pre_stmt:  idents.= exprs 
	pre_stmt:  idents.NEW_ASSIGN exprs 
	idents:  idents., IDENT 

	NEW_ASSIGN  shift 57
	=  shift 56
	,  shift 58
	.  error


state 7
	pre_stmt:  IF.pre_stmt ; expr block 
	pre_stmt:  IF.expr block 
	pre_stmt:  IF.pre_stmt ; expr block ELSE block 
	pre_stmt:  IF.expr block ELSE block 
	idents: .    (28)

	IDENT  shift 21
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 9
	RETURN  shift 10
	IF  shift 7
	NIL  shift 18
	FOR  shift 8
	TRUE  shift 17
	FALSE  shift 19
	GO  shift 11
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  reduce 28 (src line 268)

	pre_stmt  goto 59
	expr  goto 60
	idents  goto 6

state 8
	pre_stmt:  FOR.block 
	pre_stmt:  FOR.expr block 
	pre_stmt:  FOR.pre_stmt ; expr ; pre_stmt block 
	pre_stmt:  FOR.idents NEW_ASSIGN RANGE expr block 
	idents: .    (28)

	IDENT  shift 21
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 9
	RETURN  shift 10
	IF  shift 7
	NIL  shift 18
	FOR  shift 8
	TRUE  shift 17
	FALSE  shift 19
	GO  shift 11
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	{  shift 65
	$  shift 20
	.  reduce 28 (src line 268)

	block  goto 61
	pre_stmt  goto 63
	expr  goto 62
	idents  goto 64

state 9
	pre_stmt:  FUNC.IDENT ( idents ) block 
	pre_stmt:  FUNC.IDENT ( idents ) ( idents ) block 
	expr:  FUNC.( idents ) block 
	expr:  FUNC.( idents ) ( idents ) block 

	IDENT  shift 66
	(  shift 67
	.  error


state 10
	pre_stmt:  RETURN.exprs 
	exprs: .    (31)

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  reduce 31 (src line 282)

	expr  goto 69
	exprs  goto 68

state 11
	pre_stmt:  GO.expr ( exprs ) 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 72

state 12
	stmt_delimiter:  COMMENT.    (24)

	.  reduce 24 (src line 218)


state 13
	stmt_delimiter:  EOF.    (25)

	.  reduce 25 (src line 223)


state 14
	stmt_delimiter:  ;.    (26)

	.  reduce 26 (src line 227)


state 15
	stmt_delimiter:  \n.    (27)

	.  reduce 27 (src line 231)


state 16
	expr:  NUMBER.    (34)

	.  reduce 34 (src line 305)


state 17
	expr:  TRUE.    (35)

	.  reduce 35 (src line 310)


state 18
	expr:  NIL.    (36)

	.  reduce 36 (src line 315)


state 19
	expr:  FALSE.    (37)

	.  reduce 37 (src line 320)


state 20
	expr:  $.IDENT 

	IDENT  shift 73
	.  error


state 21
	idents:  IDENT.    (29)
	expr:  IDENT.    (39)

	NEW_ASSIGN  reduce 29 (src line 272)
	=  reduce 29 (src line 272)
	,  reduce 29 (src line 272)
	.  reduce 39 (src line 329)


state 22
	expr:  [.] { exprs } 

	]  shift 74
	.  error


state 23
	expr:  -.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 75

state 24
	expr:  STRING.    (47)

	.  reduce 47 (src line 366)


state 25
	expr:  (.expr ) 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 76

state 26
	expr:  !.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 77

state 27
	expr:  ~.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 78

state 28
	expr:  CHAN.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 79

state 29
	stmts:  stmt stmts.    (2)

	.  reduce 2 (src line 86)


state 30
	stmt:  pre_stmt stmt_delimiter.    (3)

	.  reduce 3 (src line 94)


state 31
	pre_stmt:  expr CHAN.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 80

state 32
	pre_stmt:  expr INC.    (10)

	.  reduce 10 (src line 151)


state 33
	pre_stmt:  expr DEC.    (11)

	.  reduce 11 (src line 156)


state 34
	expr:  expr ..IDENT 

	IDENT  shift 81
	.  error


state 35
	expr:  expr [.expr ] 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 82

state 36
	expr:  expr (.exprs ) 
	exprs: .    (31)

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  reduce 31 (src line 282)

	expr  goto 69
	exprs  goto 83

state 37
	expr:  expr +.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 84

state 38
	expr:  expr -.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 85

state 39
	expr:  expr *.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 86

state 40
	expr:  expr /.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 87

state 41
	expr:  expr %.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 88

state 42
	expr:  expr <.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 89

state 43
	expr:  expr >.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 90

state 44
	expr:  expr LE.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 91

state 45
	expr:  expr GE.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 92

state 46
	expr:  expr EQ.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 93

state 47
	expr:  expr NE.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 94

state 48
	expr:  expr SHL.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 95

state 49
	expr:  expr SHR.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 96

state 50
	expr:  expr AND.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 97

state 51
	expr:  expr OR.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 98

state 52
	expr:  expr XOR.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 99

state 53
	expr:  expr &.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 100

state 54
	expr:  expr |.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 101

state 55
	expr:  expr ^.expr 

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  error

	expr  goto 102

state 56
	pre_stmt:  idents =.exprs 
	exprs: .    (31)

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  reduce 31 (src line 282)

	expr  goto 69
	exprs  goto 103

state 57
	pre_stmt:  idents NEW_ASSIGN.exprs 
	exprs: .    (31)

	IDENT  shift 70
	NUMBER  shift 16
	STRING  shift 24
	FUNC  shift 71
	NIL  shift 18
	TRUE  shift 17
	FALSE  shift 19
	CHAN  shift 28
	-  shift 23
	!  shift 26
	~  shift 27
	[  shift 22
	(  shift 25
	$  shift 20
	.  reduce 31 (src line 282)

	expr  goto 69
	exprs  goto 104

state 58
	idents:  idents ,.IDENT 

	IDENT  shift 105
	.  error


state 59
	pre_stmt:  IF pre_stmt.; expr block 
	pre_stmt:  IF pre_stmt.; expr block ELSE block 

	;  shift 106
	.  error


state 60
	pre_stmt:  expr.    (6)
	pre_stmt:  expr.CHAN expr 
	pre_stmt:  expr.INC 
	pre_stmt:  expr.DEC 
	pre_stmt:  IF expr.block 
	pre_stmt:  IF expr.block ELSE block 
	expr:  expr.. IDENT 
	expr:  expr.[ expr ] 
	expr:  expr.( exprs ) 
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.< expr 
	expr:  expr.> expr 
	expr:  expr.LE expr 
	expr:  expr.GE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.SHL expr 
	expr:  expr.SHR expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.XOR expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.^ expr 

	INC  shift 32
	DEC  shift 33
	XOR  shift 52
	CHAN  shift 31
	OR  shift 51
	AND  shift 50
	|  shift 54
	&  shift 53
	^  shift 55
	<  shift 42
	>  shift 43
	LE  shift 44
	GE  shift 45
	NE  shift 47
	EQ  shift 46
	+  shift 37
	-  shift 38
	*  shift 39
	/  shift 40
	%  shift 41
	SHR  shift 49
	SHL  shift 48
	[  shift 35
	(  shift 36
	.  shift 34
	{  shift 65
	.  reduce 6 (src line 112)

	block  goto 107

state 61
	pre_stmt:  FOR block.    (16)

	.  reduce 16 (src line 181)


state 62
	pre_stmt:  expr.    (6)
	pre_stmt:  expr.CHAN expr 
	pre_stmt:  expr.INC 
	pre_stmt:  expr.DEC 
	pre_stmt:  FOR expr.block 
	expr:  expr.. IDENT 
	expr:  expr.[ expr ] 
	expr:  expr.( exprs ) 
	expr:  expr.+ expr 
	expr:  expr.- expr 
	expr:  expr.* expr 
	expr:  expr./ expr 
	expr:  expr.% expr 
	expr:  expr.< expr 
	expr:  expr.> expr 
	expr:  expr.LE expr 
	expr:  expr.GE expr 
	expr:  expr.EQ expr 
	expr:  expr.NE expr 
	expr:  expr.SHL expr 
	expr:  expr.SHR expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.XOR expr 
	expr:  expr.& expr 
	expr:  expr.| expr 
	expr:  expr.^ expr 
